# ECJTU-CAN-Helper

./: .gitignore  Cargo.toml  LICENSE  README.md
application/: Cargo.toml  build.rs
application/ui/: main.slint
application/ui/views/: home.slint
service/: Cargo.toml
src/: main.rs
ui/: main.slint
ui/components/: my-horizontal-layout.slint  normal-window.slint
