[package]
name = "ecjtu_can_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.1.1"
windows-service = "0.6.0"
serde = "1.0.183"
serde_json = "1.0.105"

[build-dependencies]
slint-build = "1.1.1"

[[bin]]
name = "application"