[package]
name = "ecjtu_can_helper"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.1.1"
serde = "1.0.183"
serde_json = "1.0.105"
reqwest = "0.11.20"
tokio = "1.32.0"

[build-dependencies]
slint-build = "1.1.1"

[[bin]]
name = "application"